feat: Agregar archivo .versionrc.json
- Configurar scripts para no registrar version y tag

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "release": "standard-version",
+    "changelog": "standard-version --skip.version --skip.tag",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
