feat: Actualizar .versionrc.json

--- a/.versionrc.json
+++ b/.versionrc.json
@@ -1,4 +1,4 @@
 {
-    "header": "# Mi Encabezado Personalizado\n\nAll notable changes to this project will be documented in this file. See [standard-version](https://github.com/conventional-changelog/standard-version) for commit guidelines."
+    "header": "# Mi Encabezado Personalizado\n\nAll notable changes to this project will be documented in this file."
 }
   
