feat: Agregar mensaje de commit personalizado (changelog)

--- a/.versionrc.json
+++ b/.versionrc.json
@@ -1,7 +1,5 @@
 {
     "header": "# Mi Encabezado Personalizado\n\nAll notable changes to this project will be documented in this file.",
-    "scripts": {
-        "postchangelog": "echo 'chore(release): Nueva version <%= newVersion %>'"
-      }
+    "releaseCommitMessageFormat": "chore(release): Nueva versión - {{currentTag}}"
 }
   
